[package]
edition = "2021"
name = "wasi-compat-adapter"

[dependencies]
wasi = { version = "0.11.0", default-features = false }
wit-bindgen = { version = "0.16.0", default-features = false, features = ["macros"] }
byte-array-literals = { path = "byte-array-literals" }

[build-dependencies]
wasm-encoder = "0.41.0"
object = { version = "0.32", default-features = false, features = ["archive"] } 

[lib]
test = false
crate-type = ["cdylib"]
name = "wasi02_adapter"

[features]
default = ["command"]
reactor = []
command = []

