[package]
edition = "2021"
name = "wasi-compat-adapter"
license = "Apache-2.0 WITH LLVM-exception"
version = "0.1.0"
publish = false

[dependencies]
wasi = { version = "=0.11.0", default-features = false }
wit-bindgen = { version = "0.16.0", default-features = false, features = [
    "macros",
] }
byte-array-literals = { path = "byte-array-literals" }

[build-dependencies]
wasm-encoder = "0.200"
object = { version = "0.32", default-features = false, features = ["archive"] }

[lib]
test = false
crate-type = ["cdylib"]
name = "wasi02_adapter"

[features]
default = ["command"]
reactor = []
command = []

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
lto = "fat"
strip = "debuginfo"
opt-level = "s"
