[package]
name = "wasi-update"
version = "0.1.1"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A simple tool to convert a WebAssembly module to a WASI component."
license = "Apache-2.0 WITH LLVM-exception"
keywords = ["wit", "webassembly", "wasi", "component", "preview2"]
categories = ["wasm", "web-programming"]
readme = "README.md"
repository = "https://github.com/jedisct1/wasi-update"
homepage = "https://github.com/jedisct1/wasi-update"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4", features = ["std", "cargo", "wrap_help", "string"] }
ct-codecs = "1"
log = "0.4"
thiserror = "1"
wit-component = "0.200"

[package.metadata.deb]
extended-description = """\
A simple tool to convert a WebAssembly module to a WASI component."""
assets = [
    [
        "target/release/wasi-update",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/wasi-update/README.md",
        "644",
    ],
]
section = "devel"
depends = "$auto"
priority = "optional"

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
