[package]
name = "wasi-update"
version = "0.1.1"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A simple tool to convert a WebAssembly module to a WASI component."
license = "Apache-2.0 WITH LLVM-exception"
keywords = ["wit", "webassembly", "wasi", "component", "preview2"]
categories = ["wasm", "web-programming"]
readme = "README.md"
repository = "https://github.com/jedisct1/wasi-update"
homepage = "https://github.com/jedisct1/wasi-update"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4", features = ["std", "cargo", "wrap_help", "string"] }
ct-codecs = "1"
log = "0.4"
thiserror = "1"
wit-component = "0.200"
